# kambacode_site

./: .gitignore  db.sqlite3  main.py  package-lock.json  package.json  pyproject.toml  vite.config.mjs
auth/: api.py
courses/: admin.py  api.py  models.py  urls.py  views.py
courses/forms/: course_form.py
courses/migrations/: 0001_initial.py  0002_course_created_at_course_updated_at_and_more.py  0003_course_thumbnail.py
main/: api.py  settings.py  urls.py
static/js/: main.js
staticfiles/: manifest.json
staticfiles/django-assets/: main-CRS_r4qU.js  main-F8mVW0Rl.css
templates/: base.html  course_lesson.html  couse_detail.html  home.html
templates/components/: navbar.html
